# gpxmapper

./: .cursorrules  .cz.toml  .flake8  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  AGENTS.md  CHANGELOG.md  LICENSE  README.md  build_exe.py  captions-example.csv  cz.toml  exe_entry_point.py  gpxmapper.spec  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.aiassistant/rules/: project_overview.md
.cursor/rules/: git-github-workflow.mdc  gpxmapper-core.mdc  python-standards.mdc
.github/: copilot-instructions.md  git-commit-instructions.md
.github/workflows/: build.yml  release.yml
docs/: gen_api.py
docs/devdocs/: commitizen_types.md  reverse_geocode_cache_database.md  testing_conventions.md  testing_tips.md
docs/solutions/: 2026-06-nominatim-geolocate.md
docs/superpowers/plans/: 2026-06-07-geolocate-label-verbosity.md  2026-06-07-nominatim-geolocate-cli.md  2026-06-07-reverse-geocode-sqlite-cache.md
docs/userdocs/: SUMMARY.md  index.md  windows-bundle.md
examples/: example_usage.py  test_cache_dir.py
gpxmapper/: __init__.py  cli.py  map_renderer.py  video_generator.py
install/: README.md
install/doc/: THIRD_PARTY_NOTICES.md  USER_GUIDE.md
nominatim/: start_server.bat  start_server.sh  verify_local_hungary.sh
scripts/: build-docs.ps1  build-docs.sh  check_commit_message.py  extract_licenses.sh  generate_third_party_notices.py  package-windows-release.ps1  repair-venv.ps1
src/gpxmapper/: __init__.py  __main__.py  cli.py  font_manager.py  geolocation.py  geolocation_label_format.py  geolocation_overlay.py  gpx_parser.py  map_renderer.py  map_renderer_async.py  models.py  nominatim_config.py  reverse_geocode_cache.py  video_generator.py
src/gpxmapper/cli/: __init__.py  check_nominatim.py  clear_cache.py  generate.py  info.py  log_level.py  utils.py
src/gpxmapper/geolocation_clients/: __init__.py  base.py  nominatim_geopy.py  nominatim_httpx.py
src/gpxmapper/map_renderer/: __init__.py  async_renderer.py  base.py  constants.py  factory.py  sync.py
tests/: conftest.py  test_cli.py  test_cli_nominatim_resolve.py  test_font_manager.py  test_geolocation_async_client.py  test_geolocation_label_format.py  test_geopy_nominatim_client.py  test_gpx_parser.py  test_map_renderer_async_performance.py  test_map_renderer_base.py  test_models_gpxtrackpoint.py  test_nominatim_config.py  test_reverse_geocode_cache.py  test_video_generator.py
